# mu

./: .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGES.rst  Makefile  README.rst  ROADMAP.rst  make.py  pyproject.toml  run.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  test.yml
conf/: mu.appdata.xml  mu.codewith.editor.desktop
docs/: api.rst  architecture.rst  conf.py  first-steps.rst  index.rst  modes.rst  setup.rst  tests.rst  translations.rst
docs/design/: file_reading_and_writing.rst  line-endings.rst  runtime_virtual_environment.rst
mu/: __init__.py  __main__.py  app.py  config.py  i18n.py  logic.py  mu_debug.py  settings.py
mu/debugger/: client.py  config.py  runner.py  utils.py
mu/interface/: __init__.py  dialogs.py  editor.py  main.py  panes.py  themes.py  widgets.py  workers.py
mu/locale/de_DE/LC_MESSAGES/: mu.mo  mu.po
mu/locale/es/LC_MESSAGES/: mu.mo  mu.po
mu/locale/fr/LC_MESSAGES/: mu.mo  mu.po
mu/locale/ja/LC_MESSAGES/: mu.mo  mu.po
mu/locale/nl/LC_MESSAGES/: mu.mo  mu.po
mu/locale/pl/LC_MESSAGES/: mu.mo  mu.po
mu/locale/pt_BR/LC_MESSAGES/: mu.mo  mu.po
mu/locale/pt_PT/LC_MESSAGES/: mu.mo  mu.po
mu/locale/ru_RU/LC_MESSAGES/: mu.mo  mu.po
mu/locale/sk_SK/LC_MESSAGES/: mu.mo  mu.po
mu/locale/sv/LC_MESSAGES/: mu.mo  mu.po
mu/locale/uk_UA/LC_MESSAGES/: mu.mo  mu.po
mu/locale/vi/LC_MESSAGES/: mu.mo  mu.po
mu/locale/zh_CN/LC_MESSAGES/: mu.mo  mu.po
mu/locale/zh_TW/LC_MESSAGES/: mu.mo  mu.po
mu/modes/: __init__.py  base.py  circuitpython.py  debugger.py  esp.py  lego.py  microbit.py  pico.py  pyboard.py  pygamezero.py  python3.py  snek.py  web.py
mu/modes/api/: __init__.py  adafruit.py  esp.py  flask.py  microbit.py  pi.py  pygamezero.py  python3.py  shared.py  snek.py
mu/resources/: __init__.py
mu/wheels/: __init__.py
package/: dmg_settings.py
tests/: conftest.py  session.json  settings.json  settingswithcustomhex.json  settingswithmissingcustomhex.json  settingswithoutworkspace.json  test___main__.py  test_app.py  test_logic.py  test_mu_debug.py  test_resources.py  test_settings.py
tests/debugger/: test_client.py  test_runner.py
tests/interface/: test_dialogs.py  test_editor.py  test_main.py  test_panes.py  test_themes.py  test_widgets.py  test_workers.py
tests/modes/: test_base.py  test_circuitpython.py  test_debug.py  test_esp.py  test_lego.py  test_microbit.py  test_pico.py  test_pyboard.py  test_pygamezero.py  test_python3.py  test_snek.py  test_web.py
tests/virtual_environment/: test_pip.py  test_process.py  test_virtual_environment.py
utils/: adafruit_api.py  avatar.py  flask_api.py  gh_downloads.py  mkapi.py  pgzero_api.py  python3_api.py
